# st7789v_lvgl

./: .gitignore  CMakeLists.txt  Kconfig  README.md  configure.sh  ozone_pico_bootloader.txt  prj.conf  rpi_pico_w.overlay  sample.yaml
src/: buttons.c  display.c  image_3.c  main.c
